# Analyser

./: .gitignore  .pylintrc  README.md  VERSION  changes_log.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: pylint.yml  release.yml  tests.yml
assets/: icon.icns
config/: budget_analyser.ini
documentation/: README.md  statement_formatter_changes.md
documentation/LaTeX/: budget_analyser_documentation.tex
documentation/uml/: README.md
resources/mappers/: description_to_sub_category.json  sub_category_to_category.json
scripts/: convert_icon.py  open_macos_app.sh  sign_macos_app.sh
scripts/manual/: gui_login_flow.py  statement_formatter_smoke.py
src/budget_analyser/: __init__.py  __main__.py  version.py
src/budget_analyser/config/: preferences.py  settings.py
src/budget_analyser/controller/: __init__.py  backend_controller.py  budget_controller.py  cashflow_mapper_controller.py  controllers.py  dtos.py  earnings_stats_controller.py  expenses_stats_controller.py  mapper_controller.py  payments_reconciliation_controller.py  settings_controller.py  sub_category_mapper_controller.py  upload_controller.py  utils.py  yearly_summary_stats_controller.py
tests/: conftest.py
tests/unit/: test_budget_controller.py  test_cashflow_mapper_controller.py  test_earnings_controller.py  test_earnings_stats_controller.py  test_expenses_controller.py  test_payments_reconciliation.py  test_preferences.py  test_reporting_signs.py  test_statement_formatter.py  test_sub_category_mapper_controller.py  test_transaction_processor_mapping.py
(+73 files in other folders)
